add column table post

--- a/BlogHealth/Views/Admin/AddPost.cshtml
+++ b/BlogHealth/Views/Admin/AddPost.cshtml
@@ -149,6 +149,12 @@
                                         </div>
                                         <div class="col-md-12">
                                             <div class="md-form">
+                                                <i class="fa fa-bookmark prefix "></i>
+                                                <textarea rows="4"  name="ShortContent" class=" md-textarea pt-0" placeholder="Nội dung rút gọn."></textarea>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-12">
+                                            <div class="md-form">
                                                 <i class="fa fa-link prefix"></i>
                                                 <input type="text" name="Slug" class="form-control" placeholder="Slug" readonly>
                                             </div>
@@ -156,7 +162,7 @@
                                         <div class="col-md-6">
                                             <div class="md-form">
                                                 <div class="md-form">
-                                                    <i class="fa fa-bookmark-o prefix"></i>
+                                                    <i class="fa fa-tags prefix"></i>
                                                     <input type="text" name="Tag" class="form-control" placeholder="Tags (Mỗi tag cách nhau bằng dấu , )">
                                                 </div>
                                             </div>
