--- a/BlogHealth/Views/Shared/_Layout.cshtml
+++ b/BlogHealth/Views/Shared/_Layout.cshtml
@@ -109,8 +109,9 @@
 
                     <!-- Links -->
                     <ul class="navbar-nav  justify-content-md-center">
-                        <li class="nav-item active ml-1">
-                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        @Html.Action("PartialMenu", "Home")
+                        @*<li class="nav-item active ml-1">
+                            <a class="nav-link" href="#">Home </a>
                         </li>
                         <li class="nav-item ml-1">
                             <a class="nav-link" href="#">Features</a>
@@ -119,7 +120,7 @@
                             <a class="nav-link" href="#">Pricing</a>
                         </li>
 
-                        <!-- Dropdown -->
+                        
                         <li class="nav-item dropdown ml-1">
                             <a data-href="@Url.Action("Index","Home")" href="@Url.Action("Index","Home")" class="nav-link" data-toggle="dropdown">Dropdown</a>
                             
@@ -128,7 +129,7 @@
                                 <a class="dropdown-item p-1" href="#">Another action</a>
                                 <a class="dropdown-item p-1" href="#">Something else here</a>
                             </div>
-                        </li>
+                        </li>*@
 
                     </ul>
                     <!-- Links -->
