--- a/BlogHealth/Views/Shared/_Layout.cshtml
+++ b/BlogHealth/Views/Shared/_Layout.cshtml
@@ -88,12 +88,18 @@
             </nav>
             <!--Navbar-->
 
-            <div class="my-5">
-                1
+            <div class=" row my-1 ">
+                <div class="col-md-3">
+
+                </div>
+                <div class="col-md-9">
+                <a class="float-right" href="http://member.civi.vn/cpc/?sid=25224&bid=10033920" target="_blank"><img src="http://member.civi.vn/imp/b/?sid=25224&bid=10033920" /></a>
+
+                </div>
             </div>
             
             
-            <nav class="navbar navbar-expand-lg hidden-md-down navbar-light grey lighten-5 black-text py-0  px-lg-5 px-xl-5 px-md-5 px-sm-0  " id="nav-fix-top" style="font-weight:400;">
+            <nav class="navbar navbar-expand-lg hidden-md-down navbar-light white black-text py-0  px-lg-5 px-xl-5 px-md-5 px-sm-0  " id="nav-fix-top" style="font-weight:400;">
 
                 <!-- Navbar brand -->
                 @*<a class="navbar-brand" href="#">Navbar</a>*@
