--- a/BlogHealth/Views/Home/PartialMenu.cshtml
+++ b/BlogHealth/Views/Home/PartialMenu.cshtml
@@ -7,7 +7,10 @@
     if (!CheckTool.CheckMenuHasChild(Model[i].ID))
     {
         <li class="nav-item @(i==0?"active":"") ml-1">
-            <a class="nav-link" href="#">@Model[i].Name</a>
+          
+            <a class="nav-link " style="" href="#">@Model[i].Name</a>
+
+            
         </li>
     }
     else
